fixed critical security issues

--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,10 @@
             "name": "deryck",
             "email": "hello@deryckoe.com"
         }
-    ]
+    ],
+    "config": {
+        "platform": {
+            "php": "7.4.0"
+        }
+    }
 }
